--- a/index.html
+++ b/index.html
@@ -494,16 +494,16 @@ Your order is safe with us!</div>
 						<div class="container clearfix">
 							<ul class="photo_list">
 																	<li>
-										<figure><a href="our-team-06.html" title="Overseas Team"><img src="storage/uploads/images/202205/11/1652257625_No7KV3bbxY.jpg" alt="Overseas Team"></a></figure>
-										<p>Overseas Team</p>
+										<figure><a href="our-team-06.html" title="Export Team"><img src="storage/uploads/images/202205/11/1652257625_No7KV3bbxY.jpg" alt="Export Team"></a></figure>
+										<p>Export Team</p>
 									</li>
 																	<li>
-										<figure><a href="our-team-05.html" title="Overseas Team"><img src="storage/uploads/images/202205/11/1652257703_LL3B0U9jUm.jpg" alt="Overseas Team"></a></figure>
-										<p>Overseas Team</p>
+										<figure><a href="our-team-05.html" title="R&D Team"><img src="storage/uploads/images/202205/11/1652257703_LL3B0U9jUm.jpg" alt="R&D Team"></a></figure>
+										<p>R&D Team</p>
 									</li>
 																	<li>
-										<figure><a href="our-team-04.html" title="Overseas Team"><img src="storage/uploads/images/202205/11/1652257890_YAlwGmwtQL.jpg" alt="Overseas Team"></a></figure>
-										<p>Overseas Team</p>
+										<figure><a href="our-team-04.html" title="Workshop Team"><img src="storage/uploads/images/202205/11/1652257890_YAlwGmwtQL.jpg" alt="Workshop Team"></a></figure>
+										<p>Workshop Team</p>
 									</li>
 																	<li>
 										<figure><a href="our-team-03.html" title="Function Applicator Series"><img src="storage/uploads/images/202205/30/1653882255_pAIpL8VTZq.jpg" alt="Function Applicator Series"></a></figure>
