--- a/videos.html
+++ b/videos.html
@@ -248,13 +248,13 @@
                             <ul class="ny_videoL clearfix row">
                                             <li class="col-sm-4 col-xs-6">
                             <div class="in_videoL_m">
-                                <a href="video-01.html" title="video 01" class="in_videoL_img"><img src="storage/uploads/images/202204/25/1650869516_1WZUvz74q5.jpg" alt="video 01"><i></i></a>
+                                <a href="" title="video 01" class="in_videoL_img"><img src="storage/uploads/images/202204/25/1650869516_1WZUvz74q5.jpg" alt="video 01"><i></i></a>
                                 <p>video 01</p>
                             </div>
                         </li>
                                             <li class="col-sm-4 col-xs-6">
                             <div class="in_videoL_m">
-                                <a href="video-02.html" title="video 02" class="in_videoL_img"><img src="storage/uploads/images/202204/25/1650869544_28BjvTYFWQ.jpg" alt="video 02"><i></i></a>
+                                <a href="" title="video 02" class="in_videoL_img"><img src="storage/uploads/images/202204/25/1650869544_28BjvTYFWQ.jpg" alt="video 02"><i></i></a>
                                 <p>video 02</p>
                             </div>
                         </li>
