--- a/our-team_p2.html
+++ b/our-team_p2.html
@@ -255,7 +255,13 @@
                                             <div class="text">
 
                                                 <a href="our-team-01.html" title="Our Team 01" class="h4">Our Team 01</a>
-                                                <p>Anhui BEILI Makeup Technology Limited Corporation is a professional supplier of makeup brushes and other makeup tools for makeup artists.it is established in 2018 ,but we are in this area around 10 years.Our company is located in Anhui Province with convenient transportation access,It is near shanghai port.We help sending goods to forwarders or directly ship to clients&amp;rsquo; country.Our main advantage is that we use high quality raw materials especially natural hair for makeup brushes and good prices for the quality.</p>
+                                               <p> &emsp; &emsp;Guangzhou Ruizhi Industrial Co., Ltd. is one of the largest Manufacturer and Supplier for all kinds of Laminated tubes, Plastic PE tubes in China. With 15yrs experience, we export to many different country and cooperated with famous brands . Thousand of mould can found here and various products range is our advantages.
+</p>
+   <p> &emsp; &emsp;Our aim is on following criteria:</p>
+    <p> &emsp;&emsp;   ①Supply of best quality product to satisfy customer.</p>
+    <p> &emsp;&emsp;    ②Deliver as per committed time.</p>
+        <p> &emsp;&emsp;   ③Market competitive price.</p>
+    <p> &emsp;&emsp;   ④Launch new products mould every month.</p>
                                                 <a href="our-team-01.html" title="Our Team 01" class="my_more1">View More</a>
                                             </div>
                                         </div>
