--- a/flip-cap_p2.html
+++ b/flip-cap_p2.html
@@ -294,18 +294,20 @@
                          </div>
                     </div>
                   </li>
-                                    <li>
+
+                  <li>
                     <div class="li">
                       <div class="cbp-vm-image">
-                        <div class="image">  <a class="img1" href="150-250g-hair-mask-repair-pbl-round-tube.html" title="150-250g Hair Mask Repair PBL Round Tube"><img id="product_detail_img" src="storage/uploads/images/202306/29/1688023652_otHduD46Kx.jpg" alt="Hair mask tube" /></a>                                                          <a class="img2" href="150-250g-hair-mask-repair-pbl-round-tube.html" title="150-250g Hair Mask Repair PBL Round Tube"><img src="storage/uploads/images/202306/29/1688023662_DbbsYHCluz.jpg" alt="Facial cleanser tube}" /></a>  </div>
+                        <div class="image">  <a class="img1" href="60-120ml-face-cream-tube-with-double-color-flip-cap.html" title="60-120ml Face Cream Tube with Double Color Flip Cap"><img id="product_detail_img" src="storage/uploads/images/202212/30/1672386376_HYbmx07icH.jpg" alt="pink cosmetic tube" /></a>                                                          <a class="img2" href="60-120ml-face-cream-tube-with-double-color-flip-cap.html" title="60-120ml Face Cream Tube with Double Color Flip Cap"><img src="storage/uploads/images/202212/30/1672386389_BOvvbER8S2.jpg" alt="new flip cap tube}" /></a>  </div>
                       </div>
                       <div class="text">
-                        <div class="h4"><a href="150-250g-hair-mask-repair-pbl-round-tube.html" title="150-250g Hair Mask Repair PBL Round Tube">150-250g Hair Mask Repair PBL Round Tube</a></div>
-                        <div class="cbp-vm-details">Customize 150-250g Hair Mask Repair PBL Round Tube. More infos, send message now!</div>
-                        <p class="tags_ul"> <span><i class="fa fa-tags"></i>Tags : </span>  <a href="skincare-cosmetic-tube.html">skincare cosmetic tube</a>  <a href="body-wash-gel-tube.html">Body wash gel tube</a>  <a href="hair-nourish-tube.html">Hair nourish tube</a>  <a href="200ml-shampoo-tube.html">200ml shampoo tube</a>  <a href="hair-mask-tube.html">hair mask tube</a>  <a href="cosmetic-pbl-abl-tube.html">Cosmetic PBL ABL tube</a>  </p>
+                        <div class="h4"><a href="60-120ml-face-cream-tube-with-double-color-flip-cap.html" title="60-120ml Face Cream Tube with Double Color Flip Cap">60-120ml Face Cream Tube with Double Color Flip Cap</a></div>
+                        <div class="cbp-vm-details">60-120ml Face Cream Tube with Double Color Flip Cap, More infos, send message now!</div>
+                        <p class="tags_ul"> <span><i class="fa fa-tags"></i>Tags : </span>  <a href="face-wash-tube-120ml.html">face wash tube 120ml</a>  <a href="flip-cap-tube.html">flip cap tube</a>  <a href="body-lotion-tube.html">body lotion tube</a>  <a href="100ml-cosmetic-tube.html">100ml cosmetic tube</a>  <a href="shower-tube-custom.html">shower tube custom</a>  <a href="face-cleanser-tube.html">face cleanser tube</a>  <a href="double-color-flip-cap-tube.html">double color flip cap tube</a>  <a href="face-lotion-cute-tube.html">face lotion cute tube</a>  <a href="new-flip-cap-tube.html">new flip cap tube</a>  <a href="pink-cosmetic-tube.html">pink cosmetic tube</a>  </p>
                          </div>
                     </div>
                   </li>
+
                                     <li>
                     <div class="li">
                       <div class="cbp-vm-image">
