--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
         <link rel="shortcut icon" href="storage/uploads/images/202308/31/1693467541_ScJ1XH2hmW.png" type="image/png"> 
         <title>COSMETIC PACKAGING TUBE FROM RUIZHI PACKAGING</title> 
-        <meta name="description" content="RUIZHI PACKAGING Customized Sustainable Green Packaging Sugarcane Tube, PCR Plastic Tube, Aluminum Tube Packaging, Cosmetic Tube, Applicator Tube, Cosmetic Bottle Sets"> 
-        <meta name="keywords" content="RUIZHI PACKAGING Customized Sustainable Green Packaging Sugarcane Tube, PCR Plastic Tube, Aluminum Tube Packaging, Cosmetic Tube, Applicator Tube, Cosmetic Bottle Sets"> 
+        <meta name="description" content="RUIZHI PACKAGING Customized Sustainable Green Packaging Sugarcane Tube, PCR Plastic Tube, Aluminum Tube Packaging, Cosmetic Tube, Applicator Tube Etc."> 
+        <meta name="keywords" content="RUIZHI PACKAGING Customized Sustainable Green Packaging Sugarcane Tube, PCR Plastic Tube, Aluminum Tube Packaging, Cosmetic Tube, Applicator Tube Etc."> 
         <link type="text/css" rel="stylesheet" href="front/css/bootstrap.css"> 
         <link type="text/css" rel="stylesheet" href="front/css/font-awesome.min.css"> 
         <link type="text/css" rel="stylesheet" href="front/css/swiper.css"> 
