--- a/cosmetic-tubes-packaging-for-sale.html
+++ b/cosmetic-tubes-packaging-for-sale.html
@@ -126,7 +126,7 @@
                               <a href="products.html">Products</a> 
                               <ul class="vmegamenu"> 
                               <li class="has-menu"> 
-                              <a href="cosmetic-tubes-packaging-for-sale.html" class="title">COSMETICS TUBE</a> 
+                              <a href="cosmetic-tubes-packaging-for-sale.html" class="title">COSMETIC TUBES PACKAGING</a> 
                               <ul class="vmegamenu02"> 
                               <li> 
                               <a href="eye-tube.html">Eye Tube</a> 
@@ -219,7 +219,7 @@
                               </ul> 
                               </li> 
                               <li class="has-menu"> 
-                              <a href="cosmetic-tubes-packaging-for-sale-05.html" class="title">COSMETICS BOTTLES</a> 
+                              <a href="cosmetics-bottles.html" class="title">COSMETICS BOTTLES</a> 
                               <ul class="vmegamenu02"> 
                               <li> 
                               <a href="pp-bottle.html">PP BOTTLE</a> 
@@ -276,7 +276,7 @@
                               <a href="products.html">Products</a> 
                               <ul class="nav_child"> 
                               <li> 
-                              <a href="cosmetic-tubes-packaging-for-sale.html">COSMETICS TUBE</a> 
+                              <a href="cosmetic-tubes-packaging-for-sale.html">COSMETIC TUBES PACKAGING</a> 
                               <ul> 
                               <li> 
                               <a href="eye-tube.html">Eye Tube</a> 
@@ -369,7 +369,7 @@
                               </ul> 
                               </li> 
                               <li> 
-                              <a href="cosmetic-tubes-packaging-for-sale-05.html">COSMETICS BOTTLES</a> 
+                              <a href="cosmetics-bottles.html">COSMETICS BOTTLES</a> 
                               <ul> 
                               <li> 
                               <a href="pp-bottle.html">PP BOTTLE</a> 
@@ -423,11 +423,11 @@
             <div class="mbx"> 
                 <a href="index.html">Home</a> 
                 <span>/</span> 
-                <h2>COSMETICS TUBE</h2> 
+                <h2>COSMETIC TUBES PACKAGING</h2> 
             </div> 
         </div> 
         <div class="title_bg"> 
-            <div class="maintitle"><h1>COSMETICS TUBE</h1></div> 
+            <div class="maintitle"><h1>COSMETIC TUBES PACKAGING</h1></div> 
             <img src="front/images/title_line.png" alt="title_line"> 
         </div> 
         <div class="n_main"> 
@@ -927,7 +927,7 @@
                               <ul class="mtree"> 
                               <li class=" active  clearfix"> 
                               <span></span> 
-                              <a href="cosmetic-tubes-packaging-for-sale.html" class="title">COSMETICS TUBE</a> 
+                              <a href="cosmetic-tubes-packaging-for-sale.html" class="title">COSMETIC TUBES PACKAGING</a> 
                               <ul> 
                               <li> 
                               <a href="eye-tube.html">Eye Tube</a> 
@@ -1023,7 +1023,7 @@
                               </li> 
                               <li class=" clearfix"> 
                               <span></span> 
-                              <a href="cosmetic-tubes-packaging-for-sale-05.html" class="title">COSMETICS BOTTLES</a> 
+                              <a href="cosmetics-bottles.html" class="title">COSMETICS BOTTLES</a> 
                               <ul> 
                               <li> 
                               <a href="pp-bottle.html">PP BOTTLE</a> 
