--- a/blog-002.html
+++ b/blog-002.html
@@ -430,7 +430,7 @@
         </div> 
         <div class="title_bg"> 
             <div class="maintitle">
-                 Different Applicator Tubes 
+                Different Types of Cosmetic Applicator Tubes
             </div> 
             <img src="front/images/title_line.png" alt="title_line"> 
         </div> 
@@ -439,13 +439,52 @@
                 <div id="sidebar" class="penci-sticky-sidebar n_right"> 
                     <div class="theiaStickySidebar"> 
                         <div class="blog_main"> 
-                            <h1>Different Applicator Tubes</h1> 
+                            <h1>Different Types of Cosmetic Applicator Tubes</h1>
                             <div class="blog-info"> 
                               <i class="fa fa-calendar"></i>
                                Apr 25, 2022 
                             </div> 
-                            <div class="blog_p page  newm"> 
-                              <p>Multi Function Tube Available.</p> 
+                            <div class="blog_p page  newm">                              
+
+                                <h2>Introduction</h2>
+                                <br>
+                                <p>
+                                    Cosmetic products have revolutionized the way we enhance our natural beauty. Alongside the development of innovative formulations, the packaging industry has introduced various types of applicator tubes to make the application process seamless and efficient. In this article, we will dive into the world of cosmetic applicator tubes, exploring their diverse functions and how they can elevate your beauty routine.
+                                </p>
+                                <br>
+                                <h2>Understanding the Role of Different Applicator Tubes</h2>
+                                <br>
+                                <h3>Standard Applicator Tubes:</h3>
+                               
+                                <p>
+                                    These tubes feature a narrow nozzle, allowing controlled dispensing of liquid or creamy products such as foundation, concealer, or lip gloss. The small opening ensures precise application and minimizes product waste.
+                                </p>
+                                <br>
+                                <h3>Rollerball Applicator Tubes:</h3>
+                                <p>
+                                    Rollerball tubes are commonly used for eye creams, serums, and fragrances. The stainless-steel rollerball distributes the product evenly, offering a cooling and massaging effect during application.
+                                </p>
+                                <br>
+                                <h3>Brush Applicator Tubes:</h3>
+                                <p>
+                                    Brush applicator tubes have a built-in brush attached to the cap or inside the tube. They are ideal for products like liquid eyeliner, mascara, or eyebrow gel. The brush allows for precise and smooth application, giving you more control over the desired look.
+                                </p>
+                                <br>
+                                <h3>Sponge Applicator Tubes:</h3>
+                                <p>
+                                    Sponge applicator tubes are commonly used for products like foundation, BB creams, and color correctors. The sponge attached to the tube provides a convenient and hygienic way to apply and blend the product onto the skin. It ensures even coverage and a flawless finish.
+                                </p>
+                                <br>
+                                <h3>Roll-On Applicator Tubes:</h3>
+                                <p>
+                                    Roll-on tubes are usually used for products like perfumes, moisturizers, and oils. They contain a rollerball or metal ball applicator that glides over the skin, evenly distributing the product. The roll-on design allows for easy and mess-free application, making it a popular choice for travel-friendly packaging.
+                                </p>
+                                <br>
+                                <h3>Conclusion</h3>
+                                <p>
+                                    Cosmetic applicator tubes play a crucial role in enhancing our beauty routines. With their specific designs and functionalities, they make the application process more convenient, precise, and enjoyable. Whether you prefer standard, rollerball, brush, sponge, or roll-on tubes, there is a perfect applicator out there for every product and personal preference. Explore the different types available in the market and discover the ones that elevate your cosmetic experience to the next level.
+                                </p>
+                                
                             </div> 
                             <ul class="navigation clearfix"> 
                               <li class="prev_post"> 
