--- a/contact-us.html
+++ b/contact-us.html
@@ -253,6 +253,9 @@
                               <a href="customization.html">Customization</a> 
                               </li> 
                               <li class=""> 
+                                <a href="blog.html">Blog</a> 
+                                </li> 
+                              <li class=""> 
                               <a href="videos.html">Videos</a> 
                               </li> 
                               <li class="active"> 
