--- a/index.html
+++ b/index.html
@@ -1291,6 +1291,8 @@
                         <a href="sitemap.html">Sitemap</a>
                          / 
                         <a href="sitemap.xml">XML</a>
+                         / 
+                        <a href="privacy-policy.html">Privacy Policy</a>
                          / IPv6 network supported 
                         <img src="front/images/ipv6.jpg" alt="ipv6"> 
                     </div> 
