--- a/blog-002.html
+++ b/blog-002.html
@@ -12,20 +12,12 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
         <meta name="description" content="Different Types of Cosmetic Applicator Tubes">
 
-        <!-- <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@Rukk">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:image" content="https://www.ruizhipack.com/storage/uploads/images/202206/02/1654134408_dkJGOYZjC3.jpg"> 
+        <meta name="twitter:url" content="https://www.ruizhipack.com/blog-002.html">
         <meta name="twitter:title" content="Different Types of Cosmetic Applicator Tubes">
         <meta name="twitter:description" content="Cosmetic products have revolutionized the way we enhance our natural beauty. Alongside the development of innovative formulations, the packaging industry has introduced various types of applicator tubes to make the application process seamless and efficient. In this article, we will dive into the world of cosmetic applicator tubes, exploring their diverse functions and how they can elevate your beauty routine.">
-        <meta name="twitter:image" content="https://www.ruizhipack.com/storage/uploads/images/202206/02/1654134408_dkJGOYZjC3.jpg"> -->
-        <meta name="twitter:card" content="summary" />
-        <meta name="twitter:site" content="@ruizhipack" />
-        <meta name="twitter:creator" content="@Rukk" />
-        <meta property="og:url" content="https://www.ruizhipack.com/blog-002.html" />
-        <meta property="og:title" content="Different Types of Cosmetic Applicator Tubes" />
-        <meta property="og:description" content="Cosmetic products have revolutionized the way we enhance our natural beauty. Alongside the development of innovative formulations, the packaging industry has introduced various types of applicator tubes to make the application process seamless and efficient. In this article, we will dive into the world of cosmetic applicator tubes, exploring their diverse functions and how they can elevate your beauty routine." />
-        <meta property="og:image" content="https://www.ruizhipack.com/storage/uploads/images/202206/02/1654134408_dkJGOYZjC3.jpg" />
-
-
+       
         
         <link rel="shortcut icon" href="storage/uploads/images/202308/31/1693467541_ScJ1XH2hmW.png" type="image/png"> 
         <title>NEWS 02 FROM RUIZHI PACKAGING</title> 
