--- a/blog-002.html
+++ b/blog-002.html
@@ -14,8 +14,8 @@
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:image" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg"> 
-        <meta name="twitter:image:src" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg"> 
-        <meta name="twitter:image:alt" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg"> 
+        <!-- <meta name="twitter:image:src" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg">  -->
+        <!-- <meta name="twitter:image:alt" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg">  -->
 
 
         <!-- <meta name="twitter:url" content="https://www.ruizhipack.com/blog-002.html"> -->
