--- a/blog-001.html
+++ b/blog-001.html
@@ -14,6 +14,18 @@
         <title>NEW 01 FROM RUIZHI PACKAGING</title> 
         <meta name="description" content="NEW 01 FROM RUIZHI PACKAGING"> 
         <meta name="keywords" content="NEW 01 FROM RUIZHI PACKAGING"> 
+
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:image" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg"> 
+        <meta name="twitter:image:src" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg"> 
+        <meta name="twitter:image:alt" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg"> 
+
+
+        <!-- <meta name="twitter:url" content="https://www.ruizhipack.com/blog-002.html"> -->
+        <meta name="twitter:title" content="Different Types of Cosmetic Applicator Tubes">
+        <!-- <meta name="twitter:description" content="Cosmetic products have revolutionized the way we enhance our natural beauty. Alongside the development of innovative formulations, the packaging industry has introduced various types of applicator tubes to make the application process seamless and efficient. In this article, we will dive into the world of cosmetic applicator tubes, exploring their diverse functions and how they can elevate your beauty routine."> -->
+       
+
         <link type="text/css" rel="stylesheet" href="front/css/bootstrap.css"> 
         <link type="text/css" rel="stylesheet" href="front/css/font-awesome.min.css"> 
         <link type="text/css" rel="stylesheet" href="front/css/swiper.css"> 
