--- a/products-04b.html
+++ b/products-04b.html
@@ -12,9 +12,13 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
 
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:image" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg"> 
-        <meta name="twitter:title" content="Different Types of Cosmetic Applicator Tubes">
+        <meta name="twitter:image" content="https://www.ruizhipack.com/storage/uploads/images/202205/26/1653570666_rqrL4T25OQ.jpg"> 
+        <meta name="twitter:title" content="100ml Kraft Paper Plastic Cosmetic Tube with Screw Cap">
        
+        <meta property="og:title" content="100ml Kraft Paper Plastic Cosmetic Tube with Screw Cap">
+        <meta property="og:description" content="desc 100ml Kraft Paper Plastic Cosmetic Tube with Screw Cap">
+        <meta property="og:image" content="https://www.ruizhipack.com/storage/uploads/images/202205/26/1653570666_rqrL4T25OQ.jpg">
+        <!-- <meta property="og:url" content="卡片链接"> -->
 
         <link rel="shortcut icon" href="storage/uploads/images/202308/31/1693467541_ScJ1XH2hmW.png" type="image/png"> 
         <title>PRODUCTS 04 FROM RUIZHI PACKAGING</title> 
