--- a/products-04b.html
+++ b/products-04b.html
@@ -16,7 +16,9 @@
         <meta name="twitter:title" content="100ml Kraft Paper Plastic Cosmetic Tube with Screw Cap">
        
         <meta property="og:title" content="100ml Kraft Paper Plastic Cosmetic Tube with Screw Cap">
-        <meta property="og:description" content="desc 100ml Kraft Paper Plastic Cosmetic Tube with Screw Cap">
+        <meta property="og:image:width" content="200">
+        <meta property="og:image:height" content="200">
+        <!-- <meta property="og:description" content="desc 100ml Kraft Paper Plastic Cosmetic Tube with Screw Cap"> -->
         <meta property="og:image" content="https://www.ruizhipack.com/storage/uploads/images/202205/26/1653570666_rqrL4T25OQ.jpg">
         <!-- <meta property="og:url" content="卡片链接"> -->
 
@@ -503,6 +505,11 @@
                                 <img src="front/images/twitter.png" alt="twitter"> 
                                 分享到Twitter
                             </button> 
+                            <button id="facebookShareButton"> 
+                                <img src="front/images/facebook.png" alt="facebook"> 
+                                分享到facebook
+                            </button> 
+
                             </div> 
                             <script>
                             $(document).ready(function() {
