--- a/blog-002.html
+++ b/blog-002.html
@@ -12,7 +12,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
         <meta name="description" content="Different Types of Cosmetic Applicator Tubes">
 
-        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:card" content="summary">
         <meta name="twitter:image" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg"> 
         <!-- <meta name="twitter:image:src" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg">  -->
         <!-- <meta name="twitter:image:alt" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg">  -->
@@ -27,8 +27,8 @@
         <meta property="og:image:height" content="200">
         <!-- <meta property="og:description" content="desc 100ml Kraft Paper Plastic Cosmetic Tube with Screw Cap"> -->
         <meta property="og:image" content="https://www.ruizhipack.com/storage/uploads/images/202205/26/1653570666_rqrL4T25OQ.jpg">
-        <!-- <meta property="og:url" content="卡片链接"> -->
-        
+        <meta property="og:url" content="https://www.ruizhipack.com/blog-002.html">
+
         
         <link rel="shortcut icon" href="storage/uploads/images/202308/31/1693467541_ScJ1XH2hmW.png" type="image/png"> 
         <title>NEWS 02 FROM RUIZHI PACKAGING</title> 
