--- a/blog-001.html
+++ b/blog-001.html
@@ -15,16 +15,23 @@
         <meta name="description" content="NEW 01 FROM RUIZHI PACKAGING"> 
         <meta name="keywords" content="NEW 01 FROM RUIZHI PACKAGING"> 
 
-        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:card" content="summary">
         <meta name="twitter:image" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg"> 
-        <meta name="twitter:image:src" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg"> 
-        <meta name="twitter:image:alt" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg"> 
+        <!-- <meta name="twitter:image:src" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg">  -->
+        <!-- <meta name="twitter:image:alt" content="https://www.ruizhipack.com/storage/uploads/images/202309/21/1695278285_vA9IXzQ30i.jpg">  -->
 
 
         <!-- <meta name="twitter:url" content="https://www.ruizhipack.com/blog-002.html"> -->
         <meta name="twitter:title" content="Different Types of Cosmetic Applicator Tubes">
-        <!-- <meta name="twitter:description" content="Cosmetic products have revolutionized the way we enhance our natural beauty. Alongside the development of innovative formulations, the packaging industry has introduced various types of applicator tubes to make the application process seamless and efficient. In this article, we will dive into the world of cosmetic applicator tubes, exploring their diverse functions and how they can elevate your beauty routine."> -->
+        <meta name="twitter:description" content="Cosmetic products have revolutionized the way we enhance our natural beauty. Alongside the development of innovative formulations, the packaging industry has introduced various types of applicator tubes to make the application process seamless and efficient. In this article, we will dive into the world of cosmetic applicator tubes, exploring their diverse functions and how they can elevate your beauty routine.">
        
+        <meta property="og:title" content="100ml Kraft Paper Plastic Cosmetic Tube with Screw Cap">
+        <meta property="og:image:width" content="200">
+        <meta property="og:image:height" content="200">
+        <meta property="og:description" content="desc 100ml Kraft Paper Plastic Cosmetic Tube with Screw Cap">
+        <meta property="og:image" content="https://www.ruizhipack.com/storage/uploads/images/202205/26/1653570666_rqrL4T25OQ.jpg">
+        <meta property="og:url" content="https://www.ruizhipack.com/blog-001.html">
+
 
         <link type="text/css" rel="stylesheet" href="front/css/bootstrap.css"> 
         <link type="text/css" rel="stylesheet" href="front/css/font-awesome.min.css"> 
